[tool.poetry]
name = "kyto-base-service"
version = "0.1.0"
description = ""
authors = ["Name Surname <author@example.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "src"},
    {include = "*", from = "tests"},
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
isort = "^5.12.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
